refactor: improve code quality and remove explicit getter/setter methods
This update cleans up the codebase by removing explicit getter and setter methods that duplicate Lombok functionality, while introducing several improvements. The changes include adding null safety annotations, improving CORS configuration with method references, fixing authorization logic, and extracting common authentication response generation into a separate method for better code organization.